@@ -191,7 +191,16 @@ associated getters and setters.</td>
 	<td class="summary">Set frame number.</td>
 	</tr>
 	<tr>
-	<td class="name" ><a href="#Moveable:GetSlotHP">Moveable:GetSlotHP(ID)</a></td>
+	<td class="name" ><a href="#Moveable:GetHP">Moveable:GetHP()</a></td>
+	<td class="summary">Get current HP (hit points/health points)</td>
+	</tr>
+	<tr>
+	<td class="name" ><a href="#Moveable:SetHP">Moveable:SetHP(HP)</a></td>
+	<td class="summary">Set current HP (hit points/health points)
+ Clamped to [0, 32767] for "intelligent" entities (i.e.</td>
+	</tr>
+	<tr>
+	<td class="name" ><a href="#Moveable:GetSlotHP">Moveable:GetSlotHP()</a></td>
 	<td class="summary">Get HP definded for that object type (hit points/health points) (Read Only).</td>
 	</tr>
 	<tr>
@@ -281,15 +290,6 @@ associated getters and setters.</td>
 	<td class="summary">Set the moveable's position
  If you are moving a moveable whose behaviour involves knowledge of room geometry,
  (e.g.</td>
-	</tr>
-	<tr>
-	<td class="name" ><a href="#Moveable:GetHP">Moveable:GetHP()</a></td>
-	<td class="summary">Get current HP (hit points/health points)</td>
-	</tr>
-	<tr>
-	<td class="name" ><a href="#Moveable:SetHP">Moveable:SetHP(HP)</a></td>
-	<td class="summary">Set current HP (hit points/health points)
- Clamped to [0, 32767] for "intelligent" entities (i.e.</td>
 	</tr>
 	<tr>
 	<td class="name" ><a href="#Moveable:GetLocationAI">Moveable:GetLocationAI()</a></td>
@@ -907,22 +907,65 @@ shiva:SetObjectID(TEN.Objects.ObjID.BIGMEDI_ITEM)</pre>
 
 </dd>
     <dt>
+    <a name = "Moveable:GetHP"></a>
+    <strong>Moveable:GetHP()</strong>
+    </dt>
+    <dd>
+    Get current HP (hit points/health points)
+
+
+
+
+    <h3>Returns:</h3>
+    <ol>
+
+           <span class="types"><span class="type">int</span></span>
+        the amount of HP the moveable currently has
+    </ol>
+
+
+
+
+</dd>
+    <dt>
+    <a name = "Moveable:SetHP"></a>
+    <strong>Moveable:SetHP(HP)</strong>
+    </dt>
+    <dd>
+    Set current HP (hit points/health points)
+ Clamped to [0, 32767] for "intelligent" entities (i.e.  anything with AI); clamped to [-32767, 32767] otherwise.
+
+
+
+    <h3>Parameters:</h3>
+    <ul>
+        <li><span class="parameter">HP</span>
+            <span class="types"><span class="type">int</span></span>
+         the amount of HP to give the moveable
+        </li>
+    </ul>
+
+
+
+
+
+</dd>
+    <dt>
     <a name = "Moveable:GetSlotHP"></a>
-    <strong>Moveable:GetSlotHP(ID)</strong>
+    <strong>Moveable:GetSlotHP()</strong>
     </dt>
     <dd>
     Get HP definded for that object type (hit points/health points) (Read Only).
 
 
 
-    <h3>Parameters:</h3>
-    <ul>
-        <li><span class="parameter">ID</span>
-            <span class="types"><span class="type">int</span></span>
-         of the moveable slot type.
-        </li>
-    </ul>
 
+    <h3>Returns:</h3>
+    <ol>
+
+           <span class="types"><span class="type">int</span></span>
+        the moveable's slot default hit points
+    </ol>
 
 
 
@@ -1431,50 +1474,6 @@ baddy:SetOnCollidedWithRoom(LevelFuncs.roomCollided)</pre>
             <span class="types"><span class="type">bool</span></span>
          Will room changes be automatically detected? Set to false if you are using overlapping rooms (default: true)
          (<em>optional</em>)
-        </li>
-    </ul>
-
-
-
-
-
-</dd>
-    <dt>
-    <a name = "Moveable:GetHP"></a>
-    <strong>Moveable:GetHP()</strong>
-    </dt>
-    <dd>
-    Get current HP (hit points/health points)
-
-
-
-
-    <h3>Returns:</h3>
-    <ol>
-
-           <span class="types"><span class="type">int</span></span>
-        the amount of HP the moveable currently has
-    </ol>
-
-
-
-
-</dd>
-    <dt>
-    <a name = "Moveable:SetHP"></a>
-    <strong>Moveable:SetHP(HP)</strong>
-    </dt>
-    <dd>
-    Set current HP (hit points/health points)
- Clamped to [0, 32767] for "intelligent" entities (i.e.  anything with AI); clamped to [-32767, 32767] otherwise.
-
-
-
-    <h3>Parameters:</h3>
-    <ul>
-        <li><span class="parameter">HP</span>
-            <span class="types"><span class="type">int</span></span>
-         the amount of HP to give the moveable
         </li>
     </ul>
 
