@@ -153,6 +153,16 @@
 	<td class="summary">Set the static's scale</td>
 	</tr>
 	<tr>
+	<td class="name" ><a href="#Static:GetHP">Static:GetHP()</a></td>
+	<td class="summary">Get current HP (hit points/health points)
+ Used only with shatterable static meshes.</td>
+	</tr>
+	<tr>
+	<td class="name" ><a href="#Static:SetHP">Static:SetHP(HP)</a></td>
+	<td class="summary">Set current HP (hit points/health points)
+ Used only with shatterable static meshes.</td>
+	</tr>
+	<tr>
 	<td class="name" ><a href="#Static:GetName">Static:GetName()</a></td>
 	<td class="summary">Get the static's unique string identifier</td>
 	</tr>
@@ -405,6 +415,51 @@
         <li><span class="parameter">scale</span>
             <span class="types"><span class="type">Scale</span></span>
          the static's new scale
+        </li>
+    </ul>
+
+
+
+
+
+</dd>
+    <dt>
+    <a name = "Static:GetHP"></a>
+    <strong>Static:GetHP()</strong>
+    </dt>
+    <dd>
+    Get current HP (hit points/health points)
+ Used only with shatterable static meshes.
+
+
+
+
+    <h3>Returns:</h3>
+    <ol>
+
+           <span class="types"><span class="type">int</span></span>
+        the amount of HP the static currently has
+    </ol>
+
+
+
+
+</dd>
+    <dt>
+    <a name = "Static:SetHP"></a>
+    <strong>Static:SetHP(HP)</strong>
+    </dt>
+    <dd>
+    Set current HP (hit points/health points)
+ Used only with shatterable static meshes.
+
+
+
+    <h3>Parameters:</h3>
+    <ul>
+        <li><span class="parameter">HP</span>
+            <span class="types"><span class="type">int</span></span>
+         the amount of HP to give the static
         </li>
     </ul>
 
