@@ -2249,15 +2249,43 @@ most can just be ignored (see usage).</description>
 <function>
 	<module>Objects.Moveable</module>
 	<caller>Moveable</caller>
-	<name>GetSlotHP</name>
-	<summary>Get HP definded for that object type (hit points/health points) (Read Only).</summary>
+	<name>GetHP</name>
+	<summary>Get current HP (hit points/health points)</summary>
+	<returns>
+		<return>
+			<type>int</type>
+			<description>the amount of HP the moveable currently has</description>
+		</return>
+	</returns>
+</function>
+
+<function>
+	<module>Objects.Moveable</module>
+	<caller>Moveable</caller>
+	<name>SetHP</name>
+	<summary>Set current HP (hit points/health points)
+ Clamped to [0, 32767] for "intelligent" entities (i.e.</summary>
+	<description>anything with AI); clamped to [-32767, 32767] otherwise.</description>
 	<parameters>
 		<parameter>
-			<name>ID</name>
+			<name>HP</name>
 			<type>int</type>
-			<description>of the moveable slot type.</description>
+			<description>the amount of HP to give the moveable</description>
 		</parameter>
 	</parameters>
+</function>
+
+<function>
+	<module>Objects.Moveable</module>
+	<caller>Moveable</caller>
+	<name>GetSlotHP</name>
+	<summary>Get HP definded for that object type (hit points/health points) (Read Only).</summary>
+	<returns>
+		<return>
+			<type>int</type>
+			<description>the moveable's slot default hit points</description>
+		</return>
+	</returns>
 </function>
 
 <function>
@@ -2596,35 +2624,6 @@ most can just be ignored (see usage).</description>
 			<name>updateRoom</name>
 			<type>bool</type>
 			<description>Will room changes be automatically detected? Set to false if you are using overlapping rooms (default: true)</description>
-		</parameter>
-	</parameters>
-</function>
-
-<function>
-	<module>Objects.Moveable</module>
-	<caller>Moveable</caller>
-	<name>GetHP</name>
-	<summary>Get current HP (hit points/health points)</summary>
-	<returns>
-		<return>
-			<type>int</type>
-			<description>the amount of HP the moveable currently has</description>
-		</return>
-	</returns>
-</function>
-
-<function>
-	<module>Objects.Moveable</module>
-	<caller>Moveable</caller>
-	<name>SetHP</name>
-	<summary>Set current HP (hit points/health points)
- Clamped to [0, 32767] for "intelligent" entities (i.e.</summary>
-	<description>anything with AI); clamped to [-32767, 32767] otherwise.</description>
-	<parameters>
-		<parameter>
-			<name>HP</name>
-			<type>int</type>
-			<description>the amount of HP to give the moveable</description>
 		</parameter>
 	</parameters>
 </function>
@@ -3570,6 +3569,35 @@ most can just be ignored (see usage).</description>
 			<name>scale</name>
 			<type>Scale</type>
 			<description>the static's new scale</description>
+		</parameter>
+	</parameters>
+</function>
+
+<function>
+	<module>Objects.Static</module>
+	<caller>Static</caller>
+	<name>GetHP</name>
+	<summary>Get current HP (hit points/health points)
+ Used only with shatterable static meshes.</summary>
+	<returns>
+		<return>
+			<type>int</type>
+			<description>the amount of HP the static currently has</description>
+		</return>
+	</returns>
+</function>
+
+<function>
+	<module>Objects.Static</module>
+	<caller>Static</caller>
+	<name>SetHP</name>
+	<summary>Set current HP (hit points/health points)
+ Used only with shatterable static meshes.</summary>
+	<parameters>
+		<parameter>
+			<name>HP</name>
+			<type>int</type>
+			<description>the amount of HP to give the static</description>
 		</parameter>
 	</parameters>
 </function>
