@@ -76,7 +76,9 @@ void ShatterObject(SHATTER_ITEM* item, MESH_INFO* mesh, int num, short roomNumbe
 		pos = Vector3(mesh->pos.Position.x, mesh->pos.Position.y, mesh->pos.Position.z);
 		scale = mesh->scale;
 
-		mesh->flags &= ~StaticMeshFlags::SM_VISIBLE;
+		if (mesh->HitPoints <= 0)
+			mesh->flags &= ~StaticMeshFlags::SM_VISIBLE;
+
 		SmashedMeshRoom[SmashedMeshCount] = roomNumber;
 		SmashedMesh[SmashedMeshCount] = mesh;
 		SmashedMeshCount++;
